--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="google-site-verification" content="U_2nR9b2bVUslx7p3CKl7CbvLacYHCKK8E7RXiGoqtQ" />
   <meta charset="utf-8" />
+  <link rel="canonical" href="https://hangars-awnings-and-pergolas-in-kha.vercel.app/" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="مظلات ابها خميس مشيط ">
 <meta name="abstract" content="مظلات برجولات ابها خميس مشيط ">
@@ -14,6 +15,86 @@
  <title>مظلات برجولات خميس مشيط ابها - حداد </title>
   <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "مؤسسة بدرية للمظلات والبرجولات",
+  "image": "https://ik.imagekit.io/lx9tl2p3c/logo.jpg",
+  "description": "مؤسسة بدرية متخصصة في تركيب المظلات، البرجولات، الهناجر، السواتر، الساندوتش بنل، المظلات المدرسية ومظلات السيارات بجودة عالية في المملكة العربية السعودية.",
+  "url": "https://hangars-awnings-and-pergolas-in-kha.vercel.app/",
+  "telephone": "+966556076357",
+  "priceRange": "متوسط",
+  "address": {
+    "@type": "PostalAddress",
+    "addressCountry": "SA",
+    "addressRegion": "الرياض",
+    "addressLocality": "خميس مشيط",
+    "streetAddress": "المملكة العربية السعودية - خميس مشيط",
+    "postalCode": "61961"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": "18.308889",
+    "longitude": "42.809167"
+  },
+  "openingHours": "Su-Sa 08:00-18:00",
+  "sameAs": [
+    "https://www.instagram.com/",
+    "https://www.tiktok.com/"
+  ],
+  "makesOffer": [
+    {
+      "@type": "Offer",
+      "itemOffered": {
+        "@type": "Service",
+        "name": "مظلات ",
+        "description": "توريد وتركيب مظلات سيارات بأعلى جودة."
+      }
+    },
+    {
+      "@type": "Offer",
+      "itemOffered": {
+        "@type": "Service",
+        "name": "هناجر",
+        "description": "تصنيع وتركيب هناجر مقاومة للحرارة والعوامل الجوية."
+      }
+    },
+    {
+      "@type": "Offer",
+      "itemOffered": {
+        "@type": "Service",
+        "name": "برجولات",
+        "description": "برجولات خشبية وحديد وبي في سي بجميع التصاميم."
+      }
+    },
+    {
+      "@type": "Offer",
+      "itemOffered": {
+        "@type": "Service",
+        "name": "هناجر",
+        "description": "بناء وتركيب هناجر بجودة عالية."
+      }
+    },
+    {
+      "@type": "Offer",
+      "itemOffered": {
+        "@type": "Service",
+        "name": "سواتر",
+        "description": "سواتر خشبية وحديد وقماش مع ضمان."
+      }
+    },
+    {
+      "@type": "Offer",
+      "itemOffered": {
+        "@type": "Service",
+        "name": "ساندوتش بنل",
+        "description": "تركيب ساندوتش بنل للعزل الحراري والصوتي."
+      }
+    }
+  ]
+}
+</script>
   <!-- */<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">/* -->
 </head>
 <body>
@@ -154,56 +235,36 @@
   <img src="https://ik.imagekit.io/lx9tl2p3c/68.jpg?updatedAt=1763735055082" alt="خميس مشيط" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/69.jpg?updatedAt=1763735142563" alt="بدرية" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/70.jpg?updatedAt=1763735124541" alt="بدريه" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/72.jpg?updatedAt=1763735100745" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/73.jpg?updatedAt=1763734981057" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/74.jpg?updatedAt=1763735124283" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/75.jpg?updatedAt=1763735102861" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/76.jpg" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/77.jpg?updatedAt=1763735004411" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/78.jpg?updatedAt=1763735036320" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/79.jpg?updatedAt=1763734987648" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/80.jpg?updatedAt=1763734958095" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/81.jpg?updatedAt=1763734932038" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/82.jpg?updatedAt=1763735039061" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/89.jpg" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/90.jpg?updatedAt=1763735159209" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/89.jpg?updatedAt=1763735139499" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/91.jpg?updatedAt=1763735107758" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/92.jpg?updatedAt=1763735087039" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/94.jpg?updatedAt=1763735108132" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/95.jpg?updatedAt=1763735126413" alt="صورة 4" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/72.jpg?updatedAt=1763735100745" alt="مظلات" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/73.jpg?updatedAt=1763734981057" alt="برجولات" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/74.jpg?updatedAt=1763735124283" alt="خميس مشيط-ابها" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/75.jpg?updatedAt=1763735102861" alt="سواتر" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/76.jpg" alt="قرميد" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/77.jpg?updatedAt=1763735004411" alt="سندوتش بنل" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/78.jpg?updatedAt=1763735036320" alt="هنجر" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/79.jpg?updatedAt=1763734987648" alt="هناجر" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/80.jpg?updatedAt=1763734958095" alt="هناجر" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/81.jpg?updatedAt=1763734932038" alt="سواتر حدائق" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/82.jpg?updatedAt=1763735039061" alt="سواتر حديد" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/89.jpg" alt="حداد" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/90.jpg?updatedAt=1763735159209" alt="سواتر " class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/89.jpg?updatedAt=1763735139499" alt="مظلات مسابح" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/91.jpg?updatedAt=1763735107758" alt="مظلات هرمية" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/92.jpg?updatedAt=1763735087039" alt="مظلات مدارس" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/94.jpg?updatedAt=1763735108132" alt="سواتر قماش" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/95.jpg?updatedAt=1763735126413" alt="طاولات" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/96.jpg?updatedAt=1763735066553" alt="مؤسسة بدرية" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/97.jpg?updatedAt=1763735106759" alt="برجولات خميس مشيط" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/124.jpg?updatedAt=1763735194149" alt="مظلات خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/125.jpg?updatedAt=1763735129305" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/126.jpg?updatedAt=1763735194929" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/127.jpg?updatedAt=1763735172422" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/128.jpg?updatedAt=1763735202413" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/129.jpg?updatedAt=1763735160067" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/123.jpg?updatedAt=1763735036843" class="img-item">
-   <img src="https://ik.imagekit.io/lx9tl2p3c/110.jpg?updatedAt=1763735032426" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/111.jpg?updatedAt=1763735032515" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/112.jpg?updatedAt=1763735056316" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/113.jpeg?updatedAt=1763735040597" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/114.jpg?updatedAt=1763735040633" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/115.jpg?updatedAt=1763735041203" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/106.jpg?updatedAt=1763735001944" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/156.jpg?updatedAt=176373514052" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/157.jpg?updatedAt=1763735124012" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/158.jpg?updatedAt=1763735124087" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/159.jpg?updatedAt=1763735124417" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/160.jpeg?updatedAt=1763735125045" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/130.jpeg?updatedAt=1763735104168" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/131.jpg?updatedAt=1763735150185" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/133.jpg?updatedAt=1763735121725" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/134.jpg?updatedAt=1763735100472" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/135.jpg?updatedAt=1763735080938" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/136.jpg?updatedAt=1763735081247" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/137.jpg?updatedAt=1763735100206" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/146.jpg?updatedAt=1763735131747" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%A7%D8%B3%D8%B7%D8%AD-%D9%82%D9%85%D8%A7%D8%B498.jpeg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A7%D9%81%D8%B6%D9%84-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AE%D8%B4%D8%A8-%D8%A8%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B658.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D9%85%D8%B8%D9%84%D8%A7%D8%AA-%D9%84%D9%83%D8%B3%D8%A7%D9%86-%D8%B4%D9%81%D8%A7%D9%81%D8%A9-%D8%B6%D8%AF-%D8%A7%D9%84%D9%83%D8%B3%D8%B1-%D8%A8%D8%A3%D9%81%D8%B6%D9%84-%D8%B3%D8%B9%D8%B1-%D9%84%D9%84%D9%85%D8%AA%D8%B1-%D9%88%D8%A3%D8%B7%D9%88%D9%84-%D8%B6%D9%85%D8%A7%D9%86561.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/125.jpg?updatedAt=1763735129305" alt="برجولات خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/126.jpg?updatedAt=1763735194929" alt="ابها" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/127.jpg?updatedAt=1763735172422" alt="برجولات خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/128.jpg?updatedAt=1763735202413" alt="حداد" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/129.jpg?updatedAt=1763735160067" alt="سندوتش بنل" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/123.jpg?updatedAt=1763735036843" alt="برجولات خميس مشيط" class="img-item">
+   <img src="https://ik.imagekit.io/lx9tl2p3c/110.jpg?updatedAt=1763735032426" alt="مظلات خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/111.jpg?updatedAt=1763735032515" alt="برجولات خميس مشيط" class="img-item">
+   <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D9%85%D8%B8%D9%84%D8%A7%D8%AA-%D9%84%D9%83%D8%B3%D8%A7%D9%86-%D8%B4%D9%81%D8%A7%D9%81%D8%A9-%D8%B6%D8%AF-%D8%A7%D9%84%D9%83%D8%B3%D8%B1-%D8%A8%D8%A3%D9%81%D8%B6%D9%84-%D8%B3%D8%B9%D8%B1-%D9%84%D9%84%D9%85%D8%AA%D8%B1-%D9%88%D8%A3%D8%B7%D9%88%D9%84-%D8%B6%D9%85%D8%A7%D9%86561.jpg" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%AA%D8%B1%D9%83%D9%8A%D8%A8-%D9%85%D8%B8%D9%84%D8%A7%D8%AA-%D9%84%D9%83%D8%B3%D8%A7%D9%86-%D8%B4%D9%81%D8%A7%D9%81%D8%A9-%D9%84%D9%84%D8%AD%D8%AF%D8%A7%D8%A6%D9%82-%D9%88%D8%A7%D9%84%D8%A7%D8%B3%D8%B7%D8%AD904.jpg" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AD%D8%AF%D9%8A%D8%AF%D9%8A%D8%A9-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AE%D8%B4%D8%A8%D9%8A%D8%A9100.jpg" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A7%D9%81%D8%B6%D9%84-%D8%A7%D9%86%D9%88%D8%A7%D8%B9-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%A7%D9%84%D9%84%D9%83%D8%B3%D8%A7%D9%86-%D9%85%D8%B9-%D8%B0%D9%83%D8%B1-%D8%A7%D9%84%D8%A7%D9%84%D9%88%D8%A7%D9%86-%D9%88%D8%A7%D9%84%D8%A7%D8%B3%D8%B9%D8%A7%D8%B1183.jpg" class="img-item">
@@ -231,23 +292,21 @@
   <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%AA%D8%B1%D9%83%D9%8A%D8%A8-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AE%D8%B4%D8%A8%D9%8A%D8%A9-%D9%88%D9%82%D9%85%D8%A7%D8%B4-%D9%88%D8%A8%D9%84%D8%A7%D8%B3%D8%AA%D9%8A%D9%83480.jpg?updatedAt=1764010221961" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A3%D8%B3%D8%B9%D8%A7%D8%B1-%D8%AA%D9%86%D8%A7%D9%81%D8%B3%D9%8A%D8%A9-%D9%84%D8%A7%D8%AD%D8%AF%D8%AB-%D8%A7%D8%B4%D9%83%D8%A7%D9%84-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6146%20(1).jpg?updatedAt=1764010226304" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%B3%D8%AF%D8%A7%D8%B3%D9%8A%D8%A9-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AB%D9%85%D8%A7%D9%86%D9%8A%D8%A9-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AD%D8%AF%D8%A7%D8%A6%D9%82-%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6666.jpg?updatedAt=1764010221769" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/171.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/173.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/183.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/178.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/170.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/185.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/177.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/186.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/176.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/182.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/Screenshot_20251127-171540_Google.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/Screenshot_20251127-171523_Google.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/180.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/174.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/172.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/179.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/181.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/171.jpg" alt="سواتر خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/173.jpg" alt="سواتر خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/183.jpg" alt="برجولات خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/178.jpg" alt="مظلات خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/170.jpg" alt="ابها خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/185.jpg" alt="أبها خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/177.jpg" alt="قرميد خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/186.jpg" alt="درابزين خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/176.jpg" alt="طاولات خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/182.jpg" alt="برجولات خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/180.jpg" alt="برجولات خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/174.jpg" alt="برجولات خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/172.jpg" alt="برجولات خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/179.jpg" alt="برجولات خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/181.jpg" alt="برجولات خميس مشيط" class="img-item">
 </div>
 
 <!-- نافذة Lightbox -->
