--- a/index2.html
+++ b/index2.html
@@ -10,25 +10,23 @@
 <meta property="og:locale" content="ar_AR">
 <meta property="og:type" content="website">
 <meta property="og:title" content="حداد خميس مشيط">
-<meta name="description" content="أفضل مظلات وسواتر وهناجر وبنل وبرجولات في خميس مشيط وأبها – تنفيذ احترافي وضمان وجودة عالية. اتصل الآن واحصل على أفضل الأسعار.">
-<meta name="keywords" content="مظلات, هناجر, بنل, برجولات, مظلات سيارات, مظلات حدائق, تركيب مظلات, مظلات خميس مشيط, مظلات أبها">
  <title>مظلات برجولات خميس مشيط ابها - حداد </title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style2.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
-  "name": "مؤسسة بدرية للمظلات والبرجولات",
+  "name": "مظلات وبرجولات خميس مشيط",
   "image": "https://ik.imagekit.io/lx9tl2p3c/logo.jpg",
-  "description": "مؤسسة بدرية متخصصة في تركيب المظلات، البرجولات، الهناجر، السواتر، الساندوتش بنل، المظلات المدرسية ومظلات السيارات بجودة عالية في المملكة العربية السعودية.",
+  "description": " متخصصة في تركيب المظلات، البرجولات، الهناجر، السواتر، الساندوتش بنل، المظلات المدرسية ومظلات السيارات بجودة عالية في المملكة العربية السعودية.",
   "url": "https://hangars-awnings-and-pergolas-in-kha.vercel.app/",
   "telephone": "+966556076357",
   "priceRange": "متوسط",
   "address": {
     "@type": "PostalAddress",
     "addressCountry": "SA",
-    "addressRegion": "الرياض",
+    "addressRegion": "ابها",
     "addressLocality": "خميس مشيط",
     "streetAddress": "المملكة العربية السعودية - خميس مشيط",
     "postalCode": "61961"
@@ -40,8 +38,8 @@
   },
   "openingHours": "Su-Sa 08:00-18:00",
   "sameAs": [
-    "https://www.instagram.com/",
-    "https://www.tiktok.com/"
+    "https://www.instagram.com/mohammed2321571?utm_source=qr&igsh=Nnl0YWxmcHFleTd2",
+    "https://www.tiktok.com/@user5661981542987?_r=1&_t=ZS-91jFs6p0IgZ"
   ],
   "makesOffer": [
     {
@@ -106,11 +104,10 @@
               <img src="https://ik.imagekit.io/lx9tl2p3c/logo.jpg" alt="لوجو 1" class="">
           </div>
           <div>
-            <h1>مظلات وبرجولات وهناجر</h1>
-            <div style="font-size:12px;color:var(--muted);">خميس مشيط • أبها مؤسسة بدرية للمقاولات</div>
+            <h1>مظلات وبرجولات وهناجر في خميس مشيط وأبها</h1>
+            <div style="font-size:12px;color:var(--muted);">خميس مشيط • أبها مظلات برجولات سواتر</div>
           </div>
         </div>
-
         <div class="menu" id="mainMenu">  
   <a href="#home">الرئيسية</a>  
 
@@ -175,7 +172,7 @@
           <div class="grid-3">
             <div class="info">
               <strong>الموقع</strong>
-              <div class="muted"> خميس مشيط، المملكة العربية السعودية-مؤسسة بدرية للمقاولات</div>
+              <div class="muted"> خميس مشيط، المملكة العربية السعودية</div>
             </div>
             <div class="info">
               <strong>أوقات الدوام</strong>
@@ -187,8 +184,9 @@
             </div>
           </div>
 
-          <p style="margin-top:14px;color:var(--muted);line-height:1.6">مظلات وسواتر خميس مشيط متخصصون بتركيب جميع انواع مظلات وبرجولات وسواتر حديد مظلات وهناجر خميس مشيط مظلات وسواتر قماش مظلات وسواتر مدارس مظلات وسواتر ابها خميس مشيط بأعلى جودة تصاميم متعددة ومبتكرة لجميع انواع المظلات والبرجولات والهناجر حسب الطلب تلبي جميع الاحتياجات.</p>
-
+<p>
+نقدم خدمات تركيب المظلات والبرجولات والهناجر في خميس مشيط وأبها، باستخدام أفضل مواد الحدادة وبجودة عالية تناسب المناخ في المنطقة.
+</p>
  <!-- معرض الصور -->
 <section class="hero">
   <div class="container">
@@ -222,7 +220,7 @@
   <img src="https://ik.imagekit.io/lx9tl2p3c/28.jpg" alt="سندوتش بنل" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/29.jpg?updatedAt=1763735074868" alt="سندوتش بنل" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/30.jpg?updatedAt=1763734971999" alt="برجولات" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/31.jpg?updatedAt=1763735154999" alt="0556076357" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/31.jpg?updatedAt=1763735154999" alt="قرميد" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/38.jpg?updatedAt=1763735063936" alt="سواتر" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/39.jpg?updatedAt=1763734991575" alt="هنجر" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/40.jpg?updatedAt=1763734909593" alt="هناجر" class="img-item">
@@ -233,8 +231,8 @@
   <img src="https://ik.imagekit.io/lx9tl2p3c/66.jpg?updatedAt=1763735154003" alt="مظلات حدائق" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/67.jpg?updatedAt=1763735159252" alt="ابها" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/68.jpg?updatedAt=1763735055082" alt="خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/69.jpg?updatedAt=1763735142563" alt="بدرية" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/70.jpg?updatedAt=1763735124541" alt="بدريه" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/69.jpg?updatedAt=1763735142563" alt="مظلات" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/70.jpg?updatedAt=1763735124541" alt="برجولات" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/72.jpg?updatedAt=1763735100745" alt="مظلات" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/73.jpg?updatedAt=1763734981057" alt="برجولات" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/74.jpg?updatedAt=1763735124283" alt="خميس مشيط-ابها" class="img-item">
@@ -253,7 +251,7 @@
   <img src="https://ik.imagekit.io/lx9tl2p3c/92.jpg?updatedAt=1763735087039" alt="مظلات مدارس" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/94.jpg?updatedAt=1763735108132" alt="سواتر قماش" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/95.jpg?updatedAt=1763735126413" alt="طاولات" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/96.jpg?updatedAt=1763735066553" alt="مؤسسة بدرية" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/96.jpg?updatedAt=1763735066553" alt="سندوتش بنل" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/97.jpg?updatedAt=1763735106759" alt="برجولات خميس مشيط" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/124.jpg?updatedAt=1763735194149" alt="مظلات خميس مشيط" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/125.jpg?updatedAt=1763735129305" alt="برجولات خميس مشيط" class="img-item">
@@ -264,35 +262,7 @@
   <img src="https://ik.imagekit.io/lx9tl2p3c/123.jpg?updatedAt=1763735036843" alt="برجولات خميس مشيط" class="img-item">
    <img src="https://ik.imagekit.io/lx9tl2p3c/110.jpg?updatedAt=1763735032426" alt="مظلات خميس مشيط" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/111.jpg?updatedAt=1763735032515" alt="برجولات خميس مشيط" class="img-item">
-   <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D9%85%D8%B8%D9%84%D8%A7%D8%AA-%D9%84%D9%83%D8%B3%D8%A7%D9%86-%D8%B4%D9%81%D8%A7%D9%81%D8%A9-%D8%B6%D8%AF-%D8%A7%D9%84%D9%83%D8%B3%D8%B1-%D8%A8%D8%A3%D9%81%D8%B6%D9%84-%D8%B3%D8%B9%D8%B1-%D9%84%D9%84%D9%85%D8%AA%D8%B1-%D9%88%D8%A3%D8%B7%D9%88%D9%84-%D8%B6%D9%85%D8%A7%D9%86561.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%AA%D8%B1%D9%83%D9%8A%D8%A8-%D9%85%D8%B8%D9%84%D8%A7%D8%AA-%D9%84%D9%83%D8%B3%D8%A7%D9%86-%D8%B4%D9%81%D8%A7%D9%81%D8%A9-%D9%84%D9%84%D8%AD%D8%AF%D8%A7%D8%A6%D9%82-%D9%88%D8%A7%D9%84%D8%A7%D8%B3%D8%B7%D8%AD904.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AD%D8%AF%D9%8A%D8%AF%D9%8A%D8%A9-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AE%D8%B4%D8%A8%D9%8A%D8%A9100.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A7%D9%81%D8%B6%D9%84-%D8%A7%D9%86%D9%88%D8%A7%D8%B9-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%A7%D9%84%D9%84%D9%83%D8%B3%D8%A7%D9%86-%D9%85%D8%B9-%D8%B0%D9%83%D8%B1-%D8%A7%D9%84%D8%A7%D9%84%D9%88%D8%A7%D9%86-%D9%88%D8%A7%D9%84%D8%A7%D8%B3%D8%B9%D8%A7%D8%B1183.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D9%85%D8%B8%D9%84%D8%A7%D8%AA-%D9%84%D9%83%D8%B3%D8%A7%D9%86-%D8%A8%D8%A3%D8%B1%D8%AE%D8%B5-%D8%A7%D9%84%D8%A3%D8%B3%D8%B9%D8%A7%D8%B1-%D9%88%D8%A3%D9%81%D8%B6%D9%84-%D8%A7%D9%84%D8%A7%D8%B4%D9%83%D8%A7%D9%84-%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6890.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D9%85%D9%88%D8%AF%D8%B1%D9%86800.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D9%85%D8%B8%D9%84%D8%A7%D8%AA-%D9%84%D9%83%D8%B3%D8%A7%D9%86-%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6-%D9%85%D8%B8%D9%84%D8%A7%D8%AA-%D9%85%D9%85%D8%B1%D8%A7%D8%AA-%D9%88%D9%85%D8%AF%D8%A7%D8%AE%D9%84-%D9%84%D9%83%D8%B2%D8%A7%D9%86116.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D9%84%D9%83%D8%B3%D8%A7%D9%86-%D8%AA%D8%B1%D9%83%D9%8A%D8%A8-%D8%B3%D9%82%D9%81-%D8%B2%D8%AC%D8%A7%D8%AC974.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A7%D9%81%D8%B6%D9%84-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D9%84%D9%83%D8%B3%D8%A7%D9%86839.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%AD%D8%AF%D8%A7%D8%AF-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AD%D8%AF%D9%8A%D8%AF-%D8%A8%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6288.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%AA%D8%B1%D9%83%D9%8A%D8%A8-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D9%84%D9%83%D8%B3%D8%A7%D9%86-%D9%84%D9%84%D8%AD%D8%AF%D8%A7%D8%A6%D9%82-%D9%88%D8%A7%D9%84%D8%AC%D9%84%D8%B3%D8%A7%D8%AA-%D8%A7%D8%AD%D8%AF%D8%AB-%D8%A7%D9%84%D8%AA%D8%B5%D8%A7%D9%85%D9%8A%D9%85-%D8%A8%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6241.jpeg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A3%D8%B3%D8%B9%D8%A7%D8%B1-%D8%AA%D9%86%D8%A7%D9%81%D8%B3%D9%8A%D8%A9-%D9%84%D8%A7%D8%AD%D8%AF%D8%AB-%D8%A7%D8%B4%D9%83%D8%A7%D9%84-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6146.jpg" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AD%D8%AF%D9%8A%D8%AF-%D9%88%D8%AE%D8%B4%D8%A8-%D9%81%D9%8A-%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6-%D8%AA%D8%B5%D8%A7%D9%85%D9%8A%D9%85-%D9%85%D8%AA%D9%86%D9%88%D8%B9%D8%A9-%D9%88%D8%A3%D8%B3%D8%B9%D8%A7%D8%B1-%D9%85%D9%86%D8%A7%D8%B3%D8%A8%D8%A9122.jpeg?updatedAt=1764010234710" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AE%D8%B4%D8%A8-%D9%84%D9%84%D8%AD%D8%AF%D8%A7%D8%A6%D9%82-%D9%88%D8%A7%D9%84%D8%A7%D8%B3%D8%B7%D8%AD616.jpeg?updatedAt=1764010234402" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AA%D8%B1%D9%83%D9%8A%D8%A8-%D8%AC%D9%84%D8%B3%D8%A7%D8%AA-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%A8%D8%A3%D8%AC%D9%85%D9%84-%D8%A7%D9%84%D8%A7%D8%B4%D9%83%D8%A7%D9%84-%D8%A7%D9%84%D8%B9%D8%B5%D8%B1%D9%8A%D8%A945.jpg?updatedAt=1764010234079" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A7%D8%B4%D9%83%D8%A7%D9%84-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AE%D8%B4%D8%A8%D9%8A%D8%A9304.jpg?updatedAt=1764010232567" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AE%D8%B4%D8%A8%D9%8A%D8%A9-%D9%84%D9%84%D8%A8%D9%84%D9%83%D9%88%D9%86%D8%A7%D8%AA752.jpg?updatedAt=1764010232518" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AE%D8%B4%D8%A8%D9%8A%D8%A9-%D9%85%D9%88%D8%B1%D8%AF%D9%86-%D8%AD%D8%AF%D9%8A%D8%AF-%D8%B5%D9%88%D8%B1-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A9873.jpg?updatedAt=1764010229912" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AE%D8%B4%D8%A8%D9%8A%D8%A9-%D8%A7%D8%B3%D8%B9%D8%A7%D8%B1-%D8%AA%D8%B1%D9%83%D9%8A%D8%A8-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AE%D8%B4%D8%A8%D9%8A%D8%A9-%D8%A8%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6666.jpg?updatedAt=1764010229218" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%A7%D9%84%D8%A7%D8%B3%D8%B7%D8%AD-%D9%85%D8%BA%D8%B7%D8%A7%D8%A9-%D8%A8%D9%84%D9%83%D8%B3%D8%A7%D9%86618.jpeg?updatedAt=1764010228914" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A3%D8%B3%D8%B9%D8%A7%D8%B1-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6474.jpg?updatedAt=1764010228896" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%AA%D8%B1%D9%83%D9%8A%D8%A8-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6527.jpeg?updatedAt=1764010228961" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AE%D8%B4%D8%A8-%D9%85%D9%88%D8%AF%D8%B1%D9%86440.jpg?updatedAt=1764010227134" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%AA%D8%B1%D9%83%D9%8A%D8%A8-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%B9%D8%B5%D8%B1%D9%8A%D8%A9-%D9%88%D8%AD%D8%AF%D9%8A%D8%AB%D8%A9-%D8%A8%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6386.jpg?updatedAt=1764010226130" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D9%88%D8%AA%D9%86%D8%B3%D9%8A%D9%82-%D8%AD%D8%AF%D8%A7%D8%A6%D9%82-%D9%88%D8%A7%D8%B3%D8%AA%D8%B1%D8%A7%D8%AD%D8%A7%D8%AA332.jpg?updatedAt=1764010226024" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%AA%D8%B1%D9%83%D9%8A%D8%A8-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AE%D8%B4%D8%A8%D9%8A%D8%A9-%D9%88%D9%82%D9%85%D8%A7%D8%B4-%D9%88%D8%A8%D9%84%D8%A7%D8%B3%D8%AA%D9%8A%D9%83480.jpg?updatedAt=1764010221961" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A3%D8%B3%D8%B9%D8%A7%D8%B1-%D8%AA%D9%86%D8%A7%D9%81%D8%B3%D9%8A%D8%A9-%D9%84%D8%A7%D8%AD%D8%AF%D8%AB-%D8%A7%D8%B4%D9%83%D8%A7%D9%84-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6146%20(1).jpg?updatedAt=1764010226304" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%B3%D8%AF%D8%A7%D8%B3%D9%8A%D8%A9-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AB%D9%85%D8%A7%D9%86%D9%8A%D8%A9-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AD%D8%AF%D8%A7%D8%A6%D9%82-%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6666.jpg?updatedAt=1764010221769" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/171.jpg" alt="سواتر خميس مشيط" class="img-item">
+ <img src="https://ik.imagekit.io/lx9tl2p3c/171.jpg" alt="سواتر خميس مشيط" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/173.jpg" alt="سواتر خميس مشيط" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/183.jpg" alt="برجولات خميس مشيط" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/178.jpg" alt="مظلات خميس مشيط" class="img-item">
@@ -319,119 +289,6 @@
   </div>
 </div>
         </div>
-        <!-- <aside style="min-width:600px;">
-          <div class="card">
-            <h3 style="margin:0 0 6px">اتصل الآن</h3>
-            <div class="contact">
-              <div class="phone">واتساب:0556076357</div>
-              <div class="hours">أوقات الدوام: 8 ص إلى 10 م</div>
-            </div> -->
-
- <!-- <h3 style="margin-top:25px"></h3>
- <h3 style="margin-top:25px">أضغط على الفيديوهات وشاهد المحتوى بكل وضوح</h3>
-
-
-      <div class="video-gallery">
-
-<iframe src="https://streamable.com/ubbl76" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen></iframe>
-            </div>
-<div>
-<iframe src="https://streamable.com/3wgzxq" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen></iframe>
-</div>
-<div>
-<iframe src="https://streamable.com/b1bidk" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen></iframe>
-</div>
-       <iframe src="https://streamable.com/oxlj2o" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen></iframe>
-<div>
-<iframe src="https://streamable.com/ydakau" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen></iframe>
-
-        <iframe src="https://streamable.com/o6yb12" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen></iframe>
-</div>
-<div>
-<iframe src="https://streamable.com/ykiowy" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen></iframe>
-</div>
-<div>
-        <iframe src="https://streamable.com/ydakau" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen></iframe>
-</div>
-<div>
-<iframe src="https://streamable.com/ubbl76" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen></iframe>
-</div>
-<div>
-        <iframe src="https://streamable.com/35xeyf" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen></iframe>
-</div>
-<div>
-        <iframe src="https://streamable.com/uliq6h" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen></iframe>
-</div>
-<div>
-        <iframe src="https://streamable.com/0zi86v" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen></iframe>
-</div>
-<div>
-        <iframe src="https://streamable.com/gcpy50" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen></iframe>
-      
-</div>
-< نافذة الفيديو -->
-<!-- <div id="videoLightbox" class="video-lightbox">
-    <span id="closeVideo" class="close">&times;</span>
-    <video id="videoPlayer" controls></video>
-</div> 
-
-            <div style="margin-top:10px;display:flex;gap:8px;flex-wrap:wrap">
-              <a class="badge" href="#m1">مظلات سيارات</a>
-              <a class="badge" href="#m2">مظلات مسابح</a>
-              <a class="badge" href="#m4">مظلات مدارس</a>
-            </div> -->
           </div>
 
         </aside>
@@ -440,7 +297,7 @@
 
 
 <section style="margin-top:20px">
-  <h1>مظلات هناجر برجولات حداد خميس مشيط ابها</h1>
+  <h2>مظلات هناجر برجولات حداد خميس مشيط ابها</h2>
   <p style="color:var(--muted); line-height:1.8">
       نقدم خدمات تركيب جميع أنواع المظلات السواتر البرجولات في خميس مشيط وأبها
       بجودة عالية وأسعار تنافسية. نقدم مظلات سيارات، مظلات حدائق، مظلات حديد،
@@ -505,7 +362,7 @@
     <a href="https://haraj.com.sa/users/%D8%AD%D8%AF%D8%A7%D8%AF%20%D9%87%D9%86%D8%A7%D8%AC%D8%B1%20-%D9%85%D8%B8%D9%84%D8%A7%D8%AA" target="_blank"><i class="fas fa-link"></i></a>
   </div>
 </footer>
-  جميع الحقوق محفوظة لمؤسسة بدرية للمقاولات © 2025
+  جميع الحقوق محفوظة مظلات هناجر برجولات © 2025
     </footer>
   </main>
   <!-- <a class="quick-contact" href="https://wa.me/966556076357" target="_blank">📞 راسلنا الآن</a> -->
