--- a/index3.html
+++ b/index3.html
@@ -11,7 +11,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="حداد خميس مشيط">
  <title>مظلات برجولات خميس مشيط ابها - حداد </title>
-  <link rel="stylesheet" href="style2.css">
+  <link rel="stylesheet" href="style3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <script type="application/ld+json">
 {
@@ -380,6 +380,6 @@
   </a>
 
 </div>
-  <script src="js.js"></script>
+  <script src="js3.js"></script>
 </body>
 </html>
