--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 <meta property="og:locale" content="ar_AR">
 <meta property="og:type" content="website">
 <meta property="og:title" content="حداد خميس مشيط">
- <title>hk</title>
+ <title>مظلات برجولات خميس مشيط ابها - حداد </title>
   <link rel="stylesheet" href="style2.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <script type="application/ld+json">
